edit home.html text

--- a/home.html
+++ b/home.html
@@ -31,9 +31,9 @@
 	  
       <p  style="text-indent : 15px;">After I found out about Processing, I rapidly came across Daniel Shiffman's excellent videos.
 	  More precisely I find p5.js great because it makes it so easy to share your work.
-	  This vector drawing tool was a nice project to discover lots of features from Processing/p5.js.</p>
+	  This drawing tool was a nice project to discover lots of features from Processing/p5.js.</p>
       <p  style="text-indent : 15px;">About the project content : some particles paint a canvas, guided by forces generated from Perlin Noise.
-	  The physics and colors are very customizable.</p>
+	  The physics and colors are very customizable. I used Daniel Shiffman's code and continued from there.</p>
     </div>
 	
     <div class="col-sm-4">
