spin presentation change

--- a/spinning-shapes/index.html
+++ b/spinning-shapes/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   
-  <title> Test </title>
+  <title> Spinning shapes </title>
   
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
@@ -17,7 +17,8 @@ font-family: Calibre, Arial, Helvetica, sans-serif;
 margin-left : 2em;">
 <div>
 <br />
-<h2> Test sketch </h2>
+<h2> Spinning shapes </h2>
+<h4> Click to generate things... </h4>
 </div>
 </body>
 </html>
