--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
 	  It should be somewhat ready for release although I'm not 100% sure it works as well as it is supposed to.</br></p>
 	  <p><a href="https://github.com/Bleuje/ocaml-mazelab">ocaml-mazelab</a></p>
       <p>An OCaml module to show and/or generate meshes of 3D mazes.
-	  Genrerated meshes can be easily transefered to Blender's renderer for example.</br></p>
+	  Generated meshes can be easily transefered to Blender's renderer for example.</br></p>
 	  <p><a href="https://github.com/Bleuje/ocaml-4dmaze-render">ocaml-4dmaze-render</a></p>
       <p>An old project about generating and rendering in 3D some 4D perfect mazes.
 	  </br></p>
