--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
 </div>
 
 <div class="container">
-  <p>This is a page to showcase some processing or p5.js projects by E. Jacob</p>
+  <p>This is a page to showcase some p5.js or Processing projects by E. Jacob</p>
 </div>
 
 <div class="container">
