--- a/home.html
+++ b/home.html
@@ -8,7 +8,6 @@
   <script src="lib/jquery.min.js"></script>
   <script src="lib/bootstrap.min.js"></script>
   
-  
 </head>
 <body>
 
@@ -25,26 +24,28 @@
     <div class="col-sm-4">
       <h3><a href="https://rawgit.com/Bleuje/Rainbow-Code/master/challenges/CC_24_PerlinNoiseFlowField/index.html">Vector field drawing</a></h3>
 	  
-	  <img class="img-responsive" src="img/yellowish.png" alt="Yellow painting">
+	  <img class="img-responsive" src="img/yellowish.png" alt="Yellow painting" style="padding:1px;
+   border:1px solid #021a40;">
 	  
 	  <p></br></p>
 	  
       <p  style="text-indent : 15px;">After I found out about Processing, I rapidly came across Daniel Shiffman's excellent videos.
 	  More precisely I find p5.js great because it makes it so easy to share your work.
 	  This drawing tool was a nice project to discover lots of features from Processing/p5.js.</p>
-      <p  style="text-indent : 15px;">About the project content : some particles paint a canvas, guided by forces generated from Perlin Noise.
+      <p  style="text-indent : 15px;">About the project's content : some particles paint a canvas, guided by forces generated from Perlin Noise.
 	  The physics and colors are very customizable. I used Daniel Shiffman's code and continued from there.</p>
     </div>
 	
     <div class="col-sm-4">
       <h3><a href="https://rawgit.com/Bleuje/p5js-myprojects/master/spinning-shapes/index.html">Spinning shapes</a></h3>
 	  
-	  <img class="img-responsive" src="img/spin1.png" alt="Spinning triangles">
+	  <img class="img-responsive" src="img/spin1.png" alt="Spinning triangles" style="padding:1px;
+   border:1px solid #021a40;">
 	  
 	  <p></br></p>
 	  
-      <p  style="text-indent : 15px;">This mostly just something to have a second project, to make this page more useful.
-	  This is a p5.js project. Some colored shapes (right now just triangles) move and spin...</p>
+      <p  style="text-indent : 15px;">This is at the beginning mostly just something to have a second project, in order to make this page more useful.
+	  This is a p5.js project. Some colored shapes (right now just triangles) move and spin... there are many options.</p>
     </div>
 	
     <div class="col-sm-4">
