--- a/spinning-shapes/index.html
+++ b/spinning-shapes/index.html
@@ -1,24 +1,51 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  
   <title> Spinning shapes </title>
-  
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../lib/bootstrap.min.css">
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script src="../lib/jquery.min.js"></script>
+  <script src="../lib/bootstrap.min.js"></script>
+  
 </head>
+<body>
 
-<body style="
-line-height: 0.0em;
-font-size: 0.7em;
-font-family: Calibre, Arial, Helvetica, sans-serif;
-margin-left : 2em;">
-<div>
-<br />
-<h2> Spinning shapes </h2>
-<h4> Click to generate things... </h4>
+<div class="jumbotron text-center" style="background-size: 100% 140%;text-shadow: 3px 3px 0px #FFFFFF;">
+  <h1> Spinning shapes </h1>
 </div>
+
+<div class="container">
+  <p>A simple project to test interaction between p5.js and HTML/bootstrap. Click to generate things ! </br> </p>
+</div>
+
+<div class="container"  id="canvas">
+
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4" id="buttons">
+    </div>
+	
+    <div class="col-sm-4" id="phys">
+      <h3>Physics settings</h3>
+    </div>
+	
+    <div class="col-sm-4" id="disp">
+      <h3>Appearance settings</h3>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <p> <a href="../home.html"> Other projects </a> </p>
+</div>
+
 </body>
 </html>
+
