improved presentation page

--- a/home.html
+++ b/home.html
@@ -19,6 +19,17 @@
   <p>This is a page to showcase some p5.js or Processing projects by E. Jacob</p>
 </div>
 
+<div class="divider">
+</div>
+<div class="divider">
+</div>
+
+<div class="container">
+<h2> p5.js projects </h2>
+</div>
+<div class="divider">
+</div>
+
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
@@ -49,17 +60,54 @@
     </div>
 	
     <div class="col-sm-4">
-      <h3>Other projects on Github</h3>
-      <p><a href="https://github.com/Bleuje/ocaml-mesh-plot">ocaml-mesh-plot</a></p>
-      <p>A module to plot 3D meshes with Objective Caml </br></p>
+      <h3>Color gradient extraction</h3>
+      <p>Coming soon...
+	  </br></p>
+    </div>
+  </div>
+</div>
+
+<div class="divider">
+</div>
+<div class="divider">
+</div>
+
+<div class="container">
+<h2> Other projects on Github </h2>
+</div>
+<div class="divider">
+</div>
+
+<div class="container">
+  <div class="row">
+	<div class="col-sm-3">
+	  <p><a href="https://github.com/Bleuje/ocaml-mesh-plot">ocaml-mesh-plot</a></p>
+	  <img class="img-responsive" src="https://raw.githubusercontent.com/Bleuje/ocaml-mesh-plot/master/pictures/shadertest.jpg" alt="Spinning triangles" style="padding:1px;
+   border:1px solid #021a40;">
+      <p>A module to plot 3D meshes with Objective Caml. It contains some additional mesh processing features. </br></p>
+    </div>
+  
+    <div class="col-sm-3">
 	  <p><a href="https://github.com/Bleuje/antcolonysystem-tsp-qt">antcolonysystem-tsp-qt</a></p>
+	  <img class="img-responsive" src="https://raw.githubusercontent.com/Bleuje/antcolonysystem-tsp-qt/master/vwindow.png" alt="Spinning triangles" style="padding:1px;
+   border:1px solid #021a40;">
       <p>Optimization of the traveling salesman problem (TSP) by ant colony optimization.
 	  Implemented in C++ with Qt.
 	  It should be somewhat ready for release although I'm not 100% sure it works as well as it is supposed to.</br></p>
+    </div>
+	
+    <div class="col-sm-3">
 	  <p><a href="https://github.com/Bleuje/ocaml-mazelab">ocaml-mazelab</a></p>
+	  <img class="img-responsive" src="https://raw.githubusercontent.com/Bleuje/ocaml-mazelab/master/pictures/toreMaze.jpg" alt="Spinning triangles" style="padding:1px;
+   border:1px solid #021a40;">
       <p>An OCaml module to show and/or generate meshes of 3D mazes.
 	  Generated meshes can be easily transefered to Blender's renderer for example.</br></p>
+    </div>
+	
+    <div class="col-sm-3">
 	  <p><a href="https://github.com/Bleuje/ocaml-4dmaze-render">ocaml-4dmaze-render</a></p>
+	  <img class="img-responsive" src="https://raw.githubusercontent.com/Bleuje/ocaml-4dmaze-render/master/4dmaze.png" alt="Spinning triangles" style="padding:1px;
+   border:1px solid #021a40;">
       <p>An old project about generating and rendering in 3D some 4D perfect mazes.
 	  </br></p>
     </div>
