color-gradient-extraction test

--- a/colorgradient-extraction/index.html
+++ b/colorgradient-extraction/index.html
@@ -1,23 +1,55 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  
-  <title>Color gradient extraction</title>
-  
+  <title> Color gradient extraction </title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="../lib/bootstrap.min.css">
   <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
   <script language="javascript" src="libraries/p5.dom.js"></script>
   <script language="javascript" src="libraries/p5.sound.js"></script>
   <script language="javascript" type="text/javascript" src="sketch.js"></script>
+  <script src="../lib/jquery.min.js"></script>
+  <script src="../lib/bootstrap.min.js"></script>
+  
 </head>
+<body>
 
-<body style="
-line-height: 0.0em;
-font-size: 0.7em;
-font-family: Calibre, Arial, Helvetica, sans-serif;
-margin-left : 2em;">
-<div>
-<br />
-<h2> Color gradient extraction </h2>
+<div class="jumbotron text-center" style="background-size: 100% 140%;text-shadow: 3px 3px 0px #FFFFFF;">
+  <h1> Color gradient extraction </h1>
 </div>
+
+<div class="container" id="line1">
+  <p>A project to find a cycling gradient from a picture </br> </p>
+</div>
+
+<div class="divider">
+</div>
+
+<div class="container"  id="canvas">
+
+</div>
+
+<div class="divider">
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4" id="pic-choice">
+    </div>
+  </div>
+</div>
+
+<div class="divider">
+</div>
+<div class="divider">
+</div>
+
+
+<div class="container">
+  <p> <a href="../home.html"> Other projects </a> </p>
+</div>
+
 </body>
 </html>
+
