--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
 </div>
 
 <div class="container">
-  <p>This is a page to showcase some p5.js or Processing projects by E. Jacob</p>
+  <p>This page is mainly designed to showcase some <a href="https://p5js.org/">p5.js</a> or <a href="https://processing.org/">Processing</a> projects by E. Jacob</p>
 </div>
 
 <div class="divider">
@@ -48,14 +48,14 @@
     </div>
 	
     <div class="col-sm-4">
-      <h3><a href="https://rawgit.com/Bleuje/p5js-myprojects/master/spinning-shapes/index.html">Spinning shapes</a></h3>
+      <h3><a href="spinning-shapes/index.html">Spinning shapes</a></h3>
 	  
 	  <img class="img-responsive" src="img/spin1.png" alt="Spinning triangles" style="padding:1px;
    border:1px solid #021a40;">
 	  
 	  <p></br></p>
 	  
-      <p  style="text-indent : 15px;">This is at the beginning mostly just something to have a second project, in order to make this page more useful.
+      <p  style="text-indent : 15px;">This is at the beginning mostly something to have a second project, in order to make this page more useful.
 	  This is a p5.js project. Some colored shapes (right now just triangles) move and spin... there are many options.</p>
     </div>
 	
