--- a/spinning-shapes/index.html
+++ b/spinning-shapes/index.html
@@ -23,6 +23,10 @@
   <p>A simple project to test interaction between p5.js and HTML/bootstrap. Click to generate things ! </br> </p>
 </div>
 
+<div class="divider">
+</div>
+
+
 <div class="container"  id="canvas">
 
 </div>
@@ -40,6 +44,11 @@
       <h3>Appearance settings</h3>
     </div>
   </div>
+</div>
+
+<div class="divider">
+</div>
+<div class="divider">
 </div>
 
 <div class="container">
