color gradient extraction beta added

--- a/colorgradient-extraction/index.html
+++ b/colorgradient-extraction/index.html
@@ -16,11 +16,11 @@
 <body>
 
 <div class="jumbotron text-center" style="background-size: 100% 140%;text-shadow: 3px 3px 0px #FFFFFF;">
-  <h1> Color gradient extraction </h1>
+  <h1> Color gradient extraction  (beta) </h1>
 </div>
 
 <div class="container" id="line1">
-  <p>A project to find a cycling gradient from a picture </br> </p>
+  <p>A project about finding automatically a cycling color gradient from a picture </br> </p>
 </div>
 
 <div class="divider">
@@ -36,6 +36,32 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4" id="pic-choice">
+    </div>
+  </div>
+</div>
+
+<div class="divider">
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-4" id="launch">
+    </div>
+  </div>
+</div>
+
+<div class="divider">
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-sm-3" id="canvas2">
+    </div>
+	<div class="col-sm-3" id="col2">
+    </div>
+	<div class="col-sm-3" id="col3">
+    </div>
+	<div class="col-sm-3" id="buttons">
     </div>
   </div>
 </div>
