--- a/home.html
+++ b/home.html
@@ -60,8 +60,13 @@
     </div>
 	
     <div class="col-sm-4">
-      <h3>Color gradient extraction</h3>
-      <p>Coming soon...
+      <h3><a href="colorgradient-extraction/index.html">Color gradient extraction</a></h3>
+	  
+	  <img class="img-responsive" src="colorgradient-extraction/imgsamples/snight.jpg" alt="starry night" style="padding:1px;
+   border:1px solid #021a40;">
+	  
+      <p  style="text-indent : 15px;"> "Vector field drawing" taught me that color gradients can have a great influence on the "beauty" of randomly generated things.
+	I had the idea of generating color gradients from pictures, and that's what this project is about.
 	  </br></p>
     </div>
   </div>
