fixed little things

--- a/colorgradient-extraction/index.html
+++ b/colorgradient-extraction/index.html
@@ -20,7 +20,9 @@
 </div>
 
 <div class="container" id="line1">
-  <p>A project about finding automatically a cycling color gradient from a picture </br> </p>
+  <p>A project about finding automatically a cycling color gradient from a picture.
+  This is a very beta version, I plan to add the possibility to change lots of parameters, and other methods to get a color gradient.
+	Eventually, I'd like to add this work to my other project "Vector field drawing" so that the user can use color gradients from an uploaded picture.</br> </p>
 </div>
 
 <div class="divider">
