color gradient extraction with webcam

--- a/colorgradient-extraction/index.html
+++ b/colorgradient-extraction/index.html
@@ -28,6 +28,13 @@
 <div class="divider">
 </div>
 
+<div class="container" id="line2">
+<p></p>
+</div>
+
+<div class="divider">
+</div>
+
 <div class="container"  id="canvas">
 
 </div>
@@ -67,6 +74,7 @@
     </div>
   </div>
 </div>
+
 
 <div class="divider">
 </div>
