corrected typo in html

--- a/home.html
+++ b/home.html
@@ -67,7 +67,7 @@
 	  
       <p  style="text-indent : 15px;"> "Vector field drawing" taught me that color gradients can have a great influence on the "beauty" of randomly generated things.
 	I had the idea of generating color gradients from pictures, and that's what this project is about.
-	There are currently two applications of the gradients : balls moving randomly while drawing and some effects on webcam captures.
+	There are currently two applications of gradients : balls moving randomly while drawing and some effects on webcam captures.
 	  </br></p>
     </div>
   </div>
