picture upload working

--- a/colorgradient-extraction/index.html
+++ b/colorgradient-extraction/index.html
@@ -16,13 +16,13 @@
 <body>
 
 <div class="jumbotron text-center" style="background-size: 100% 140%;text-shadow: 3px 3px 0px #FFFFFF;">
-  <h1> Color gradient extraction  (beta) </h1>
+  <h1> Color gradient extraction </h1>
 </div>
 
 <div class="container" id="line1">
   <p>A project about finding automatically a cycling color gradient from a picture.
-  This is a very beta version, I plan to add the possibility to change lots of parameters, and other methods to get a color gradient.
-	Eventually, I'd like to add this work to my other project "Vector field drawing" so that the user can use color gradients from an uploaded picture.</br> </p>
+  I plan to add the possibility to change many more parameters, and other methods to get a color gradient.
+	Eventually, I'd like to add this work to my other project "Vector field drawing" so that the user can use color gradients from an uploaded picture. </br> </p>
 </div>
 
 <div class="divider">
