added new project

--- a/home.html
+++ b/home.html
@@ -33,7 +33,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-4">
-      <h3><a href="https://rawgit.com/Bleuje/Rainbow-Code/master/challenges/CC_24_PerlinNoiseFlowField/index.html">Vector field drawing</a></h3>
+      <h3><a href="vector-field-drawing/index.html">Vector field drawing</a></h3>
 	  
 	  <img class="img-responsive" src="img/yellowish.png" alt="Yellow painting" style="padding:1px;
    border:1px solid #021a40;">
@@ -45,6 +45,7 @@
 	  This drawing tool was a nice project to discover lots of features from Processing/p5.js.</p>
       <p  style="text-indent : 15px;">About the project's content : some particles paint a canvas, guided by forces generated from Perlin Noise.
 	  The physics and colors are very customizable. I used Daniel Shiffman's code and continued from there.</p>
+	  <p> <a href="https://rawgit.com/Bleuje/Rainbow-Code/master/challenges/CC_24_PerlinNoiseFlowField/index.html">(Previous version with smaller sliders)</a></p>
     </div>
 	
     <div class="col-sm-4">
