--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -36,43 +36,68 @@
 <div class="divider">
 </div>
 
-<div class="container"  id="canvas">
+<div class="container"  id="buttons2">
 
 </div>
 
 <div class="divider">
 </div>
 
-<div class="container">
-  <div class="row">
-    <div class="col-sm-4" id="physics" style="border-radius: 10px;
-    border: 4px solid #9999CC;
-    padding: 10px;">
+<div class="divider">
+</div>
+
+<div class="container" style="color: #000000;text-shadow: 0px 0px 1px #FFFFFF, 
+               0px 0px 10px #FFFFFF, 
+               0px 0px 10px #FFFFFF;">
+	<div class="container"  id="canvas" style="
+			width:100%;height:100%;position:absolute;
+           left: 100px;
+		   width:100%;
+           height:100%;
+           z-index:-1;
+		   ">
+
+	</div>
+  <div class="row" style="z-index: 0;width:90%;top: 20px;">
+    <div class="col-sm-3" id="physics" style="border-radius: 10px;
+    border: 4px solid rgba(0,0,0,0.3);
+    padding: 10px;
+	background-color: rgba(255,255,255,0.3);left: 50px;">
     </div>
-	<div class="col-sm-4" id="interaction" style="border-radius: 10px;
-    border: 4px solid #9999CC;
-    padding: 15px;">
+	<div class="col-sm-3" id="interaction" style="border-radius: 10px;
+    border: 4px solid rgba(0,0,0,0.3);
+    padding: 10px;
+	background-color: rgba(255,255,255,0.3);left: 50px;">
     </div>
-	<div class="col-sm-4" id="pen-colors" style="border-radius: 10px;
-    border: 4px solid #9999CC;
-    padding: 15px;">
+	<div class="col-sm-3" id="pen-colors" style="border-radius: 10px;
+    border: 4px solid rgba(0,0,0,0.3);
+    padding: 10px;
+	background-color: rgba(255,255,255,0.3);left: 50px;">
     </div>
-	<div class="col-sm-4" id="rectangle-mode" style="border-radius: 10px;
-    border: 4px solid #9999CC;
-    padding: 15px;">
+	<div class="col-sm-3" id="rectangle-mode" style="border-radius: 10px;
+    border: 4px solid rgba(0,0,0,0.3);
+    padding: 10px;
+	background-color: rgba(255,255,255,0.3);left: 50px;">
     </div>
   </div>
-  
+ 
   <div class="divider">
 	</div>
 
+</div>
+
+<div class="container" id="void" style="height: 500px;">
+</div>
+
+<div class="container">
   <div class="row">
     <div class="col-sm-4" id="gradient" style="border-radius: 10px;
-    border: 4px solid #9999CC;
+    border: 4px solid rgba(0,0,0,0.3);
     padding: 10px;">
+	Coming soon :
     </div>
   </div>
-</div>
+ </div>
 
 <div class="divider">
 </div>
