--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -130,12 +130,78 @@
 <div class="container" id="void" style="height: 550px;">
 </div>
 
-
 <div class="container" style="position: absolute;
     top: 900px;">
+	
+<div class="container">
+<p style="margin: 25px;">
+<h2>Documentation/comments</h2>
+<h3>Physics</h3>
+Some particles move in a random force field, somehow following Newton's second law of dynamics.
+<h4>Particle settings</h4>
+After the particle speed is updated from the force(s), a slow-down coefficient is applied to the speed.
+The <strong>particle speed</strong> slider lets you choose this coefficient between 0 and 1 (1 means not slowed-down).
+
+<h4>Force field settings</h4>
+The force field is generated from Perlin noise, but there are two methods here.
+</br>
+</br>
+The first one (<strong>Basic</strong>) uses 3D Perlin noise to generate random vector angles in 2D in "continuous way". The third dimension is used as time to make the angles change.
+</br>
+</br>
+The second method (<strong>Moving torus in 3D</strong>) is similar, but it uses a torus that moves randomly through 3D Perlin Noise to take the vector angles values. That way there are no problems on the borders.
+A new problem that appears is that the generation is unbabalanced, some areas are "contracted" in 3D space. 
+There is a clean way to avoid that by using 4D noise, but it doesn't seem easy to get in javascript.
+</br>
+</br>
+When <strong>Space size</strong> is increased, the noise is used on a larger area, so that more discontinuity with space appear. 
+</br>
+</br>
+When <strong>Force noise</strong> is increased, some random values of higher intensity are added to the field before it affects each particle (different valeus for each particle). 
+</br>
+</br>
+<strong>Force field magnitude</strong> controls the norm (i.e. intensity) of the vectors in the force field. 
+</br>
+</br>
+<strong>Force change rate</strong> controls the speed at each we evolve using the third dimension of the Perlin Noise. 
+</br>
+</br>
+<h4>Field bias</h4>
+Something to add constant values to the force field.
+</br>
+</br>
+<h3>Drawing style</h3>
+<h4>Color gradient</h4>
+The color gradients use functions of the form value(t) = a + b*sin(c + w*t) to compute the red-green-blue components of the colors.
+</br>
+</br>
+The parameters a,b,c and w can be different for each component, and even each particle (c changes with <strong>particle color offset</strong>).
+All the sliders in this section are about defining these parameters. 
+</br>
+</br>
+<h4>Color noise settings</h4>
+Some perlin noise (noise(c + w*t)) can be added to each color component.
+<strong>Synchronized color noise</strong> adds the same noise to all components.
+The previous parameter w is controlled with <strong>noise "frequency"</strong>.
+</br>
+</br>
+The parameters a,b,c and w can be different for each component, and even each particle (c changes with <strong>particle color offset</strong>).
+All the sliders in this section are about defining these parameters. 
+</br>
+</br>
+<h3>Rectangle mode</h3>
+This mode is the same as the default one, excepted that the particles are drawn with rectangles :
+ the particles are constrained to move only up down left or right, and a new rectangle is drawn from the previous one using the speed as width or
+ height (depending on the direction).
+</p>
+</div>
 <div class="divider">
 </div>
-  <p> <a href="../home.html"> Other projects </a> </p>
+<div class="divider">
+</div>
+  <p> <a href="../home.html"> Other projects </a>
+  /// <a href="https://rawgit.com/Bleuje/Rainbow-Code/master/challenges/CC_24_PerlinNoiseFlowField/index.html"> Old version </a>
+  /// <a href="http://uploadedpicturesofnecessity.tumblr.com/post/150595919944">Blog with examples of pictures</a></p>
 </div>
 
 </body>
