custom canvas size

--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -20,8 +20,9 @@
 
 <body>
 
-<div class="jumbotron text-center" style="background-size: 100% 140%;text-shadow: 2px 2px 0px #FFFFFF;">
+<div class="jumbotron text-center" style="background-size: 100% 140%;text-shadow: 2px 2px 2px #FFFFFF;">
   <h2> Vector field drawing </h2>
+  <h5> (You may have to wait a little bit for pictures to load) </h5>
 </div>
 
 <div class="container">
@@ -30,14 +31,14 @@
 <div class="divider">
 </div>
 
-<div class="container"  id="buttons">
+<div class="container"  id="buttons" style="text-align:center;">
 
 </div>
 
 <div class="divider">
 </div>
 
-<div class="container"  id="buttons2">
+<div class="container"  id="buttons2" style="text-align:center;">
 
 </div>
 
@@ -125,11 +126,14 @@
 
 </div>
 
-<div class="container" id="void" style="height: 550px;">
+<div class="container" id="void" style="height: 600px;">
 </div>
 
 <div class="container" style="position: absolute;
-    top: 900px;">
+    top: 1000px;">
+	
+<div class="container" id="button3" style="margin-left: 75px;text-align:center;">
+</div>
 	
 <div class="container" style="margin-left: 75px;">
 <div class="row">
@@ -137,7 +141,7 @@
     border: 4px solid rgba(0,0,0,0.3);
     padding: 10px;">
 <p>
-<h2>Documentation/comments</h2>
+<h2>Documentation</h2>
 <h3>Physics</h3>
 Some particles move in a random force field, somehow following Newton's second law of dynamics.
 <h4>Particle settings</h4>
@@ -195,7 +199,12 @@ All the sliders in this section are about defining these parameters.
 This mode is the same as the default one, excepted that the particles are drawn with rectangles :
  the particles are constrained to move only up down left or right, and a new rectangle is drawn from the previous one using the speed as width or
  height (depending on the direction).
-</p>
+ </br>
+ </br>
+<h2>Tricks</h2>
+ Resize your window before reloading the page (Reset button) to use smaller resolutions.
+ 
+ </p>
 </div>
 <div class="col-sm-6" style="border-radius: 10px;
     border: 4px solid rgba(0,0,0,0.3);
