--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -145,7 +145,7 @@
 	
 <div class="container" id="docgal" style="margin-left: 75px;">
 <div class="row">
-<div class="col-sm-6" style="border-radius: 10px;
+<div class="col-md-6" style="border-radius: 10px;
     border: 4px solid rgba(0,0,0,0.3);
     padding: 10px;">
 <p>
@@ -214,7 +214,7 @@ This mode is the same as the default one, excepted that the particles are drawn 
  
  </p>
 </div>
-<div class="col-sm-6" style="border-radius: 10px;
+<div class="col-md-6" style="border-radius: 10px;
     border: 4px solid rgba(0,0,0,0.3);
     padding: 10px;">
 <h2>Gallery of examples</h2>
