custom color gradient added !

--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -25,8 +25,8 @@
 }
 .btn-default:focus {
     background: #fff;
-}  
-
+	border: #ccc;
+}
   </style>
   
 </head>
@@ -66,7 +66,9 @@
 	</div>
 
 
-<div class="container" style="color: #000000;text-shadow: 0px 0px 5px #FFFFFF, 
+<div class="container" style="color: #000000;
+text-shadow: 0px 0px 3px #FFFFFF,
+			0px 0px 5px #FFFFFF, 
                0px 0px 10px #FFFFFF, 
                0px 0px 10px #FFFFFF;
 			   font-family: 'Josefin Sans', arial, sans-serif;">
