panel size + info + more points

--- a/vector-field-drawing/index.html
+++ b/vector-field-drawing/index.html
@@ -132,7 +132,9 @@ text-shadow: 0px 0px 3px #FFFFFF,
     padding: 10px;
 	background-color: rgba(255,255,255,0.3);left: 50px;">
     </div>
-	<div class="col-sm-3" id="gradient" style="border-radius: 10px;
+	</div>
+	<div class="row" style="z-index: 0;width:90%;top: 20px;">
+	<div class="col-sm-5" id="gradient" style="border-radius: 10px;
     border: 4px solid rgba(0,0,0,0.3);
     padding: 10px;
 	background-color: rgba(255,255,255,0.3);left: 50px;">
@@ -222,6 +224,11 @@ All the sliders in this section are about defining these parameters.
 This mode is the same as the default one, excepted that the particles are drawn with rectangles :
  the particles are constrained to move only up down left or right, and a new rectangle is drawn from the previous one using the speed as width or
  height (depending on the direction).
+ </br>
+ </br>
+ <h3>Custom color gradient</h3>
+This panel allows you to paint the canvas with your own picture (press pause to have only the picture on the canvas).
+Then you can define a color gradient from there. So far there is just a method that uses 200 points in an ellipse inside the canvas to define the colors.
  </br>
  </br>
 <h2>Tricks</h2>
